# permit-rag

./: .dockerignore  .env.example  .env.local.example  .env.production.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  RECOMMENDATIONS.md  STATE.md  docker-compose.yml  load_env.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
api/: auth.py  load_env.py  main.py  schemas.py
api/routes/: __init__.py  admin.py  auth.py  documents.py  projects.py  query.py  upload.py
db/: Dockerfile  __init__.py  client.py  graph_client.py  schema.sql
db/cypher/: constraints.cypher
db/init/: 01_extensions.sql  02_roles.sql
db/migrations/: 002_chunk_content_hash.sql  003_chunk_status.sql  004_source_tier.sql  005_match_chunks_update.sql  006_jurisdictions.sql  007_postgis_extension.sql  008_municipal_boundaries_pilot.sql  009_purge_audit_log.sql  010_fix_match_chunks_ordering.sql  011_users_projects.sql  012_query_log_updates.sql  013_cognito_auth.sql  014_project_fields.sql
db/seeds/: jurisdictions.sql  municipal_boundaries.sql
docs/: api.md  aws_deployment_steps.md  aws_usage.md  backlog.md  env_secrets_strategy.md  environment_setup.md  github_oidc_setup.md  implementation_plan.md  musisings.md  offboarding_runbook.md  postgis_migration_checklist.md  secrets_leak_protocol.md  sprint11_document_updates.md  sprint12_user_profile_dashboard.md  sprint4_qa_checklist.md  sprint9_users_projects.md  task14ab_execution_checklist.md
documents/: catalog.json  registry.json
documents/metadata/: 2023-national-electrical-code.json  ADA-Standards.json  CODE_OF_ORDINANCES_CITY_OF_PLANO__TEXAS.json  ada-design-standards.json  city-of-dallas-charter.json  city-of-dallas-ordiance-v1.json  city-of-dallas-ordiance-v2.json  city-of-dallas-ordiance-v3.json  dallas-fire-code-2021.json  epa-stormwater-construction.json  fortworth-upcodes-building.json  frisco-municode-zoning.json  ftworth-tx-1.json  (+14 more)
evaluation/: _ragas_shim.py  anthropic_eval_llm.py  eval_guard.py  ollama_eval_llm.py  ragas_eval.py
frontend/: .env.example  .env.local.example  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
ingestion/: chunker.py  embedder.py  governance.py  harvester.py  verification.py
journals/: commit_sprint1.txt  session_20260630.md  session_250525.md  session_260505.md  session_260519.md  session_260520.md  session_260520_b.md  session_260522.md  session_260526.md  session_260526b.md  session_260526c.md  session_260527.md  session_260529.md  session_260530.md  session_260531.md  session_260602.md  session_260604.md  session_260604b.md  session_260604c.md  session_260604d.md  session_260616.md  session_260616a.md  session_260616b.md  session_260616c.md  session_260617.md  session_260618.md  session_260623.md  session_260630a.md  session_260630b.md
rag/: conflict_detector.py  generator.py  jurisdiction_resolver.py  llm_provider.py  permit_classifier.py  pipeline.py  reranker.py  retriever.py
scratch/: apply_migration.py  check_db.py  test_db.py  test_models.py  test_rag.py
scripts/: apply_migration.py  boot-prod.ps1  check_schema.py  deploy.ps1  dev.ps1  ingest_documents.py  init_rds_db.py  purge_project_uploads.py  run_chunk_verify.py  run_migration.py  shutdown-prod.ps1  stop.ps1  sync_graph.py  test_chunker.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_api_main.py  test_chunker.py  test_db_client_purge_audit.py  test_documents_routes.py  test_embedder.py  test_eval_guard.py  test_governance.py  test_harvester_catalog.py  test_load_env.py  test_permit_classifier.py  test_purge_project_uploads_script.py  test_query_answer_route.py  test_retriever.py  test_sprint5.py  test_sprint6.py  test_sprint7.py  test_sprint8.py  test_sprint9.py  test_upload_route.py
(+59 files in other folders)
