[project]
name = "permit-rag"
version = "0.1.0"
description = "RAG-powered construction permit compliance tool for the DFW market"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ssalh" }]

dependencies = [
    # --- HTTP & scraping ---
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",

    # --- CLI / display ---
    "rich>=13.0.0",

    # --- Postgres + pgvector ---
    "psycopg[binary]>=3.1.0",
    "psycopg-pool>=3.1.0",
    "pgvector>=0.3.0",

    # --- LLM / embeddings ---
    "anthropic>=0.25.0",
    "sentence-transformers>=3.0.0",

    # --- PDF processing ---
    "pypdf>=4.0.0",
    "python-docx>=1.1.2",

    # --- Chunking ---
    "langchain-text-splitters>=0.2.0",

    # --- API ---
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # --- Config ---
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "argon2-cffi>=23.1.0",
    "PyJWT>=2.8.0",
    "email-validator>=2.1.0",
    "phonenumbers>=8.13.0",
]

[project.optional-dependencies]
mcp = [
  "langchain-mcp-adapters",
]

dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
eval = [
    "ragas>=0.1.8",
    "datasets>=2.19.0",
    "langsmith>=0.1.77",                # eval/local observability tracing
    "langchain-anthropic>=0.3.0",        # wraps Claude as RAGAs evaluator LLM
    "langchain-huggingface>=0.1.0",      # preferred HF embedding adapter path
    "langchain-google-vertexai>=2.0.0",  # peer dep ragas needs but doesn't declare
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion", "db", "rag", "api", "audit", "evaluation"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ingestion", "rag", "api", "db", "audit", "evaluation"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
